<resources>
    <string name="app_name">Room Reservation</string>
    <string name="share">Share</string>
    <string name="Show_Reservation"> Show Reservation</string>
    <string name="choose"> No Classroom Selected </string>
    <string name="last_day">Last Day</string>
    <string name="choose_room">Choose your Room</string>
    <string name="next_day">Next Day</string>
    <string name="show_reservation">Show reservation</string>
    <string name="delete">Delete</string>
    <string name="go_back">Go Back</string>
    <string name="room">Room</string>
    <string name="reservation">Reservation</string>
    <string name="from">From</string>
    <string name="purpose">Purpose</string>
    <string name="to">To</string>
    <string name="user">User</string>
    <string name="please_log_in_to_proceed">Please Log In To Proceed</string>
    <string name="enter_your_username_here">Enter Your Username Here</string>
    <string name="enter_your_password_here">Enter Your Password Here</string>
    <string name="log_in">Log In</string>
    <string name="reservations_for_this_room">Reservations For This Room</string>
    <string name="chicken">Chicken</string>
    <string name="sauna">Sauna</string>
    <string name="sign_up">Sign Up</string>
    <string name="wine">wine</string>
    <string name="details_of_notification">Details of notification</string>
    <string name="notification">Notification</string>
    <string name="notification_title">Data Insertion Notification</string>
    <string name="notification_message">Data has been inserted</string>
    <string name="data_not_inserted">Data Not  Inserted</string>
    <string-array name="room_ID">
        <item>---select your room---</item>
        <item>room ID 1</item>
        <item>room ID 2</item>
        <item>room ID 3</item>
        <item>room ID 4</item>
    </string-array>
</resources>
