<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical"
    tools:context=".activities.SingleReservationActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="17dp"
        android:text="@string/reservation"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_userId_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singleReservation_userId_textview"
        android:layout_width="0dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="16dp"
        android:text="@string/user"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_roomId_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/singleReservation_roomId_textview"
        android:layout_width="363dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="16dp"
        android:text="@string/room"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_fromTime_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/singleReservation_userId_textview"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_userId_textview" />

    <TextView
        android:id="@+id/singleReservation_fromTime_textview"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/from"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_purpose_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_roomId_textview" />

    <TextView
        android:id="@+id/singleReservation_toTime_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="125dp"
        android:text="@string/to"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_purpose_textview" />

    <TextView
        android:id="@+id/singleReservation_purpose_textview"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="16dp"
        android:text="@string/purpose"
        app:layout_constraintBottom_toTopOf="@+id/singleReservation_toTime_textview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_fromTime_textview" />

    <Button
        android:id="@+id/singleReservation_delete_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="136dp"
        android:layout_weight="1"
        android:background="@color/colorRed"
        android:onClick="singleReservation_delete_button"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_toTime_textview" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="69dp"
        android:layout_marginBottom="213dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:onClick="cancelButtonClicked"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/singleReservation_delete_button"
        app:layout_constraintTop_toBottomOf="@+id/singleReservation_toTime_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>